refactor : 가독성을 위해 collect 제거